--- a/gb/17/8/16/n9536561.md
+++ b/gb/17/8/16/n9536561.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/unusjz360/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/unusjz360/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/unusjz360/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/unusjz360/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/unusjz360/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/unusjz360/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/unusjz360/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>囚犯欲掐死老警察越狱 其他犯人蜂拥而至救狱警</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/08/insulation-5007566pp-600x400.jpg" />
 <h6>监狱示意图。（pixabay）
 </h6>
 <hr>
-	<p>【大纪元2017年08月17日讯】（大纪元记者方紫韵报导）一名老警察独自看守监狱，突然一名24岁<ahref="https://github.com/unusjz360/djy/blob/master/gb/tag/%E5%9B%9A%E7%8A%AF.md#1">囚犯</a>趁他不备，从背后掐住他的脖子。就在他生命垂危之际，一群犯人来了，他们没有趁机逃跑，而是制服了试图<ahref="https://github.com/unusjz360/djy/blob/master/gb/tag/%E8%B6%8A%E7%8B%B1.md#1">越狱</a>的犯人，救了狱警的性命！</p>
-<p>这是发生在<ahref="https://github.com/unusjz360/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>佛罗里达州希尔斯伯勒县监狱（Hillsborough County Jail）的真实事件。案件发生在2009年11月，险些丧命的警官是当时已经64岁的穆恩（Kenneth Moon）。</p>
+	<p>【大纪元2017年08月17日讯】（大纪元记者方紫韵报导）一名老警察独自看守监狱，突然一名24岁<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%9A%E7%8A%AF.md#1">囚犯</a>趁他不备，从背后掐住他的脖子。就在他生命垂危之际，一群犯人来了，他们没有趁机逃跑，而是制服了试图<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B6%8A%E7%8B%B1.md#1">越狱</a>的犯人，救了狱警的性命！</p>
+<p>这是发生在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>佛罗里达州希尔斯伯勒县监狱（Hillsborough County Jail）的真实事件。案件发生在2009年11月，险些丧命的警官是当时已经64岁的穆恩（Kenneth Moon）。</p>
 <p>这一天，穆恩正在独自值班，看守着这一位于坦帕市附近的县级监狱，突然24岁的毒犯波登（Douglas Burden）趁他不备，从背后偷袭，一下子用胳膊勒紧穆恩的脖子。</p>
 <p>呼吸道被卡、无法喘气的穆恩很快从椅子上摔倒在地，但是波登仍不放手。</p>
 <p>这一幕被监控摄像头完全拍摄了下来。</p>
 <h2>危险关头 一群犯人插手</h2>
 <p>这时，因入室抢劫罪入狱的迪亚哥（Jerry Dieguez）第一个途径这里，看到了这一凶险的场景。他没有犹豫，马上冲过来，一拳头就打在波登的脸上。</p>
-<p>随后赶来的其他几名犯人也忙着殴打波登，迫使这名身材强壮的<ahref="https://github.com/unusjz360/djy/blob/master/gb/tag/%E5%9B%9A%E7%8A%AF.md#1">囚犯</a>放开狱警穆恩，其中一名犯人更是借助穆恩的语音呼叫系统，大声不断报告：“紧急情况”，“紧急情况”，“紧急情况”！</p>
+<p>随后赶来的其他几名犯人也忙着殴打波登，迫使这名身材强壮的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%9A%E7%8A%AF.md#1">囚犯</a>放开狱警穆恩，其中一名犯人更是借助穆恩的语音呼叫系统，大声不断报告：“紧急情况”，“紧急情况”，“紧急情况”！</p>
 <p>得到报警的警方马上增派人手前来查看，犯人们制服了波登，并把他交给警方，穆恩也被送往医院检查。</p>
 <p>事件很快得以平复，穆恩最终确认并无大碍，波登则被施以行政约束处罚。</p>
 <h2>犯人赞狱警如父亲 警方赞犯人救了狱警的命</h2>
@@ -21,9 +21,9 @@
 <p>“穆恩对我们就像照顾孩子、照顾自己的儿子一样，像个医生。我们生病的时候，他总是监督我们好好吃药。”卡斯维尔继续说。</p>
 <p>监狱长普瑞维特拉（James Previtera）感谢犯人们，感谢他们救了穆恩警官的命。</p>
 <p>“事件中，犯人们的反应，我觉得，反映了我们平日对这个人群的态度。在我们这个监狱，人们互相之间很尊重。”</p>
-<p><center><a src=""></a><a href="https://git.io/JtiWX"><img width="600" src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/unusjz360/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/TSQ3jao_DTU?rel=0" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
-<h2>冒险“<ahref="https://github.com/unusjz360/djy/blob/master/gb/tag/%E8%B6%8A%E7%8B%B1.md#1">越狱</a>” 囚犯救了心脏病发狱警的命</h2>
-<p><ahref="https://github.com/unusjz360/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>囚犯救狱警的例子还有很多。</p>
+<p><center><a src=""></a><a href="https://d14a0yccee2yym.cloudfront.net/Y3bNJoVdu"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/TSQ3jao_DTU?rel=0" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<h2>冒险“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B6%8A%E7%8B%B1.md#1">越狱</a>” 囚犯救了心脏病发狱警的命</h2>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>囚犯救狱警的例子还有很多。</p>
 <p>德克萨斯州<span class="st">韦瑟福德</span>（Weatherford）市地区法院一名狱警在看守待出庭的8名囚犯期间，突因心脏病发作倒下，囚犯呼救无果，冒险冲破牢房向外求救，使得狱警得到及时救助，已无大碍。</p>
 <p>据当地媒体报道，事件发生在2016年6月23日该市地区法院地下室一间狭小的牢房内，当时这名狱警在牢房外正在同关在牢房内的囚犯们开玩笑，突然，他失去知觉倒了下去。</p>
 <p>犯人们大声呼救没有反应，于是做出了令人意想不到的举动，他们撬掉门锁冲出牢房，跑到昏迷的狱警身边，这时，狱警已经没有了心跳。</p>
@@ -42,41 +42,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/17/7/30/n9479115.md#1">川普促废除奥巴马健保法 或取消对保险商补贴</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/17/8/4/n9497896.md#1">伊州奥巴马健保保费 明年最高上涨43%</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/17/10/8/n9712530.md#1">取代奥巴马健保法 川普推临时措施</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/17/12/4/n9924301.md#1">美参院税改法案含废除奥式健保强制纳保</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/24/n12281419.md#1">《魔鬼在统治着我们的世界》系列片（5）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672763.md#1">【更新3.25】俄从格鲁吉亚搬兵入乌克兰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674639.md#1">【更新3.26】乌总统：只要北约1%的坦克飞机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675233.md#1">【更新3.27】下轮俄乌谈判将在土耳其举行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/15/n10058256.md#1" target="_blank">林辉：老百姓恨日本人也恨八路军的背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/26/n10932836.md#1" target="_blank">张林：间谍国（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">走出磨难 费城女医生找到真正的自我</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/17/12/29/n10005600.md#1">【西游义趣】之一：神秘的樵夫</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745735.md#1">【解密时分】教宗预言：末日审判将近？</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/8/n12741216.md#1">【解密时分】诺查丹玛斯预言苏共或中共政权？</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/5/n12734415.md#1">中国新年：回溯辛丑三百年 危难中寻曙光</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/6/n12737563.md#1">【远见快评】神秘预言4度惊现正史 预告霸王出</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/12/n12749482.md#1">大陆民众给法轮功创始人拜年 送上新春祝福</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/9/n12743509.md#1">【大话西油】一代宗师（下）：永恒的拿破仑</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/13/n12750442.md#1">【拍案惊奇】传缅军断网借刀华为 人民币斗美元？</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745615.md#1">赵丽颖新剧杀青照曝光 瘦的令人震惊</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747190.md#1">【新闻大家谈】拜习通话谁让步？世卫突改口</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12746106.md#1">拜登和习近平首次通话 谈了什么</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745615.md#1">赵丽颖新剧杀青照曝光 瘦的令人震惊</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747753.md#1">林青霞仨女新年收特大红包 金额曝光惊呆网友</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745090.md#1">31组艺人接力表演 台湾《红白》陪观众围炉</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12745837.md#1">61岁钟楚红晒照庆生 网友大赞冻龄外表</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747378.md#1">孙俪晒手写春联迎新年 网友喊话邓超跟着学</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747555.md#1">飞水很多人做错了 5招给肉类去腥味</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12744939.md#1">坚果热量排名 哪个最高？3类人少吃坚果</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12746195.md#1">【重播】2021年不想犯太岁 几件事千万别做</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/11/n12747322.md#1">让头发变黑就喝这碗 4种鸡汤补气又补血</a></li>
-<li><a href="https://github.com/unusjz360/djy/blob/master/gb/21/2/10/n12744565.md#1">【重播】医师秘笈大公开 年菜防疫食材怎么选</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/unusjz360/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/unusjz360/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/16/n9536561.htm">囚犯欲掐死老警察越狱 其他犯人蜂拥而至救狱警</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/16/n9536561.htm">囚犯欲掐死老警察越狱 其他犯人蜂拥而至救狱警</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/unusjz360/djy/blob/master/gb/17/8/16/n9536561.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/unusjz360/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/unusjz360/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/unusjz360/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/unusjz360/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/unusjz360/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/8/16/n9536561.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
